--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <div class="box">
     <div class="toggle">
-      <img src="/assets/moon.svg" alt="Icone Noite">
+      <img src="assets/moon.svg" alt="Icone Noite">
       <div class="button-toggle">
       </div>
-      <img src="/assets/sun.svg" alt="Icone Sol">
+      <img src="assets/sun.svg" alt="Icone Sol">
     </div>
   </div>
   <script src="js/index.js"></script>
